# kslack

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PKGBUILD  kslack.notifyrc  org.kde.kslack.desktop  release-please-config.json
.github/workflows/: build.yml
icons/: icons.qrc
src/: CMakeLists.txt  kslackui.rc  main.cpp  mainwindow.cpp  mainwindow.h  titlebarcolor.cpp  titlebarcolor.h
